prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  tls:
  - hosts:
      - prometheus.k-tech.cloud
    secretName: prometheus-secret
  ingressClassName: nginx
  rules:
  - host: prometheus.k-tech.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
